--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
       href="https://fonts.googleapis.com/css2?family=Caladea&display=swap"
       rel="stylesheet"
     />
-    <title>LM</title>
+    <title>Leandro Marelli</title>
   </head>
   <body>
     <div id="root"></div>
